--- a/Course Data Analyzer/src/course/data/analyzer/UIManager.form
+++ b/Course Data Analyzer/src/course/data/analyzer/UIManager.form
@@ -2547,6 +2547,9 @@
                             <Property name="text" type="java.lang.String" value="Undo"/>
                             <Property name="enabled" type="boolean" value="false"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UndoButtonActionPerformed"/>
+                          </Events>
                         </Component>
                         <Component class="javax.swing.JButton" name="SelectCourseButton">
                           <Properties>
